# rust-ptouch-usb

./: Cargo.toml  README.md
examples/: print_rust.rs  ptouch_rs.rs  read_status.rs
src/: lib.rs  media.rs  model.rs  printer.rs  utils.rs
src/printer/: printer_profile.rs
