[package]
name = "ptouch"
version = "0.1.0"
authors = ["Yasuyuki Komatsubara <kyasuyako@gmail.com"]
description = "Rust P-Touch Printer Driver"
license = "MIT"
homepage = "https://github.com/kyasu1/ptouch"
repository = "https://github.com/kyasu1/ptouch.git"
readme = "README.md"
keywords = ["usb", "libusb", "rusb", "ptouch" ]
edition = "2018"

[dependencies]
rusb = "0.9"
thiserror = "1.0"
log = "0.4"
image = { version = "0.23" }

[dev-dependencies]
env_logger = "0.9"
image = "0.23"
qrcode = "0.12"
bitflags = "1.2"
clap = "3.0.0-beta.5"
anyhow = "1"
